--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,15 @@ html, body {
 }
 
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
+  background: url(../images/backgrounds/red-rock-canyon-p1.jpg) center no-repeat;
   background-size: cover;
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 100%;
+}
+
+iframe {
+  text-align: center;
 }
 
 .wrapper {
@@ -62,25 +66,4 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-@media only screen and (max-width: 1042px) {
-  .wrapper {
-    width: 80%;
-  }
-}
-
-@media only screen and (max-width: 784px) {
-  body {
-    font-size: 120%;
-  }
-  h1 {
-    font-size: 2.5em;
-  }
-  h2 {
-    font-size: 1em;
-  }
-  .wrapper {
-    width: 95%;
-  }
 }
